--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <ol>
         <li><a href= "rockpaperscissors.html">Rock Paper Scissors</a></li>
+        <li><a href= "etchAsketch.html">Etch A Sketch</a></li>
     </ol>
 </body>
 </html>
